--- a/style.css
+++ b/style.css
@@ -507,10 +507,21 @@ body {
     display: none;
   }
 
-  .nav-bar::after {
+  /* .nav-bar::after {
     content: url(images/icon-hamburger.svg);
-  }
-
+  } */
+.nav-title{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.hamburgerIcon{
+  width: 8%;
+}
+.hambugerImage{
+  display: flex;
+  align-items: center;
+}
   /* HERO → stacked vertically */
   .hero-section {
     display: flex;
@@ -691,6 +702,78 @@ body {
     justify-content: center;
     gap: 8%;
     margin-top: 4%;
-    
   }
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2f354fee;
+  display: flex;
+  flex-direction: column;
+
+  padding: 5%;
+  justify-content: space-between;
+  display: none;
+}
+.top-half {
+  display: flex;
+  height: 60%;
+  gap: 10%;
+  flex-direction: column;
+}
+.mobile-menu-1st-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10%;
+}
+.mobile-menu-1st-row img {
+  width: 4%;
+}
+.nav-links-mobile {
+  padding: 0px;
+  list-style: none;
+  color: white;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+.nav-links-mobile li {
+  padding: 2% 0;
+  border-top: 1px solid rgb(136, 136, 136);
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+}
+.nav-links-mobile li:nth-last-child(2) {
+  border-bottom: 1px solid rgb(136, 136, 136);
+}
+.login-button-mobile {
+  margin-top: 4%;
+  width: 100%;
+  border-radius: 4px;
+  border: none;
+  padding: 1.2% 5%;
+  font-size: 20px;
+}
+.login-button-mobile:hover {
+  border: 2px solid white;
+  background-color: transparent;
+  color: white;
+}
+.mobile-menu-2nd-row {
+  height: 70%;
+}
+.bottom-half {
+  display: flex;
+  justify-content: center;
+  gap: 10%;
+  margin-bottom: 20%;
 }
